--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "folha-ponto",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "http://michaelss.github.io/folha-ponto",
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
