--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "folha-ponto",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "http://michaelss.github.io/folha-ponto",
+  "homepage": "https://michaelss.github.io/folha-ponto",
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -12,6 +12,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
